[package]
name = "validity"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/cameron1024/validity"
description = "A type safe wrapper for enforcing arbitrary properties at compile time"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
"test-mock" = []
